--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "src/**/*"
   ],
   "compilerOptions": {
+    "rootDir": "./src",
     "outDir": "dist",
     "allowJs": true,
     "checkJs": true,
