--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "start": "run-s lint clean build copy-index serve",
+    "start": "run-s lint clean build copy-index copy-reset serve",
     "lint": "eslint --fix src",
     "clean": "trash dist/*",
     "build": "babel src -d dist",
     "copy-index": "cpy --flat src/index.html dist",
+    "copy-reset": "cpy --flat src/reset.css dist",
     "serve": "serve dist"
   },
   "author": "",
