--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "start": "run-s lint clean build copy-index copy-reset serve",
+    "start": "run-s clean build copy-index copy-reset serve",
+    "start_old": "run-s lint clean build copy-index copy-reset serve",
     "lint": "eslint --fix src",
     "clean": "trash dist/*",
-    "build": "babel src -d dist",
+    "build": "tsc",
     "copy-index": "cpy --flat src/index.html dist",
     "copy-reset": "cpy --flat src/reset.css dist",
     "serve": "serve dist"
@@ -15,9 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.17.10",
-    "@babel/plugin-transform-typescript": "^7.16.8",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "cpy-cli": "^4.1.0",
@@ -26,6 +24,6 @@
     "npm-run-all": "^4.1.5",
     "serve": "^13.0.2",
     "trash-cli": "^5.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
