not broken. fixed eslint.

--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "start": "run-s clean build copy-index copy-reset serve",
-    "start_old": "run-s lint clean build copy-index copy-reset serve",
+    "start": "run-s lint clean build add-extensions copy-index copy-reset serve",
     "lint": "eslint --fix src",
     "clean": "trash dist/*",
     "build": "tsc",
+    "add-extensions": "babel dist -d dist",
     "copy-index": "cpy --flat src/index.html dist",
     "copy-reset": "cpy --flat src/reset.css dist",
     "serve": "serve dist"
   },
+  "script comments": {
+    "add-extensions": "add-extensions is needed because typescript does not add .js in the imports!!!!"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "babel-plugin-add-import-extension": "^1.6.0",
     "cpy-cli": "^4.1.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "npm-run-all": "^4.1.5",
     "serve": "^13.0.2",
