--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
+    "@types/jest": "^28.1.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "babel-plugin-add-import-extension": "^1.6.0",
@@ -28,9 +29,11 @@
     "eslint": "^8.16.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
     "serve": "^13.0.2",
     "trash-cli": "^5.0.0",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.2"
   }
 }
