--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "start": "run-s lint clean build add-extensions copy-index copy-reset serve",
+    "start": "run-s lint clean build add-extensions copy-index copy-reset copy-bg serve",
     "lint": "eslint --fix src",
     "clean": "trash dist/*",
     "build": "tsc",
     "add-extensions": "babel dist -d dist",
     "copy-index": "cpy --flat src/index.html dist",
     "copy-reset": "cpy --flat src/reset.css dist",
+    "copy-bg": "cpy --flat src/bg.jpg dist",
     "serve": "serve dist"
   },
   "script comments": {
