not broken. performance optimization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "dist",
+    "incremental": true, // performance increase.
     "allowJs": true,
     "checkJs": true,
     "target": "ES2022",
