--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -1,8 +1,8 @@
 x-aimerLeft: &aimerLeft { spawn: nonShootingAimer, x: 128.5, y: -22 }
 x-aimerRight: &aimerRight { spawn: nonShootingAimer, x: 228.5, y: -22 }
 
-x-sinusLeft: &sinusLeft { spawn: sinusLeft, x: 75, y: -20 }
-x-sinusRight: &sinusRight { spawn: sinusRight, x: 280, y: -20 }
+x-sinusLeft: &sinusLeft { spawn: sinus, flags: [left], x: 75, y: -20 }
+x-sinusRight: &sinusRight { spawn: sinus, x: 280, y: -20 }
 
 x-leftMiniBoss: &leftMiniBoss { spawn: firstMiniboss1, x: 118.881, y: -20 }
 x-rightMiniBoss: &rightMiniBoss { spawn: firstMiniboss2, x: 237.762, y: -20 }
@@ -79,14 +79,19 @@ x-rotateRightAndShoot: &rotateRightAndShoot
   parallellAll: [*rotateRight, *shootWhileRotation]
 
 enemy:
-  name: sinusLeft
+  name: sinus
   hp: 3
   diameter: 24
   actions:
   - { type: setShotSpeed, pixelsPerFrame: 2 }
-  - repeat: 2
-    actions:
+  - type: flag
+    flag: left
+    yes:
     - *rotateLeftAndShoot
     - *moveRight
+  - repeat: 2
+    actions:
     - *rotateRightAndShoot
     - *moveLeft
+    - *rotateLeftAndShoot
+    - *moveRight
