--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -19,8 +19,8 @@ x:
         - do: [*sinusRight, wait: 70]
 
 x-stage1: &stage1 
-  - wait: 120
-  - *aimers
+  # - wait: 120
+  # - *aimers
   - wait: 120
   - *sinuses
   - wait: 200
