not broken. converted rotate_around_relative_point action to use moveDelta.

--- a/yaml/enemies.yaml
+++ b/yaml/enemies.yaml
@@ -22,8 +22,8 @@ x-stage1: &stage1
   # - wait: 120
   # - *aimers
   # - wait: 120
-  # - *sinuses
-  # - wait: 200
+  - *sinuses
+  - wait: 200
   - do: [*leftMiniBoss, *rightMiniBoss]
 
 x-stage2: &stage2
